src/Layouts/components/Search/Search.module.scss
.search,
.search-result {
  width: 361px;
}

.search {
  position: relative;
  display: flex;
  width: 361px;
  height: var(--search-height);
  border: 1.5px solid transparent;
  padding-left: 16px;
  background-color: rgba(22, 24, 35, 0.06);
  border-radius: 92px;

  input {
    font-family: var(--font-family);
    flex: 1;
    height: 100%;
    color: var(--black);
    caret-color: var(--primary);
    font-size: 1.6rem;
    font-weight: 600;
    background-color: transparent;
  }

  input:not(:placeholder-shown) ~ .search-btn {
    color: rgba(22, 24, 35, 0.75);
  }

  &::after {
    content: '';
    position: absolute;
    top: var(--search-top-spacer);
    right: var(--search-bottom-width);
    width: 1px;
    height: calc(var(--search-height) - var(--search-top-spacer) * 2);
    background-color: rgba(22, 24, 35, 0.12);
  }

  &:focus-within {
    border-color: rgba(22, 24, 35, 0.2);
  }
}

.search-result {
  padding-top: 8px;

  .search-title {
    padding: 5px 12px;
    font-size: 1.4rem;
    font-weight: 600;
    color: rgba(22, 24, 35, 0.5);
  }
}

.clear,
.loading {
  // display: none;
  cursor: pointer;
  position: absolute;
  right: calc(var(--search-bottom-width) + 16px);
  top: 50%;
  transform: translateY(-50%);
  color: rgba(22, 24, 35, 0.34);
}

.loading {
  animation: spinner 0.8s linear infinite;
}

@keyframes spinner {
  from {
    transform: translateY(-50%) rotate(0deg);
  }
  to {
    transform: translateY(-50%) rotate(360deg);
  }
}

.search-btn {
  width: var(--search-bottom-width);
  height: 100%;
  border-top-right-radius: var(--search-border-radius);
  border-bottom-right-radius: var(--search-border-radius);
  font-size: 1.8rem;
  color: rgba(22, 24, 35, 0.34);

  &:hover {
    cursor: pointer;
    background-color: rgba(22, 24, 35, 0.03);
  }

  &:active {
    background-color: rgba(22, 24, 35, 0.06);
  }
}

